Just saving stuff

--- a/notebooks/Jonas_7.ipynb
+++ b/notebooks/Jonas_7.ipynb
@@ -35,7 +35,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test = pd.read_csv('../data/targets.csv')\n",
@@ -585,7 +587,7 @@
     "        .join(rolling_mean_features[rolling_mean_features.station == s]\n",
     "              .set_index('date').drop(['station', 'max_conc_obs'], axis=1))\\\n",
     "        .join(obs_and_mods[obs_and_mods.station == s][['Concentration', 'day']].groupby('day').max())\\\n",
-    "        .fillna(method='bfill').fillna(method='ffill')\n",
+    "        .fillna(method='ffill')\n",
     "    X = features[[c for c in features.columns if not c in [\n",
     "        'time', 'datetime', 'Concentration', 'target', 'station'\n",
     "    ]]].values\n",
@@ -1258,73 +1260,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "test_params = [\n",
-    "    {'n_neighbors': 20},\n",
-    "    {'n_neighbors': 21},\n",
-    "    {'n_neighbors': 23},\n",
-    "    {'n_neighbors': 23},\n",
-    "    {'n_neighbors': 15},\n",
-    "    {'n_neighbors': 24},\n",
-    "    {'n_neighbors': 22}\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1095,)"
+       "[('ES1396A', {'n_neighbors': 20}),\n",
+       " ('ES1856A', {'n_neighbors': 21}),\n",
+       " ('ES0691A', {'n_neighbors': 23}),\n",
+       " ('ES1679A', {'n_neighbors': 23}),\n",
+       " ('ES1992A', {'n_neighbors': 15}),\n",
+       " ('ES1480A', {'n_neighbors': 24}),\n",
+       " ('ES1438A', {'n_neighbors': 22})]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y.shape"
+    "test_params = []\n",
+    "for i, r in cv_results.sort_values(['score', 'station']).drop_duplicates('station').iterrows():\n",
+    "    p = dict(r)\n",
+    "    del p['score']\n",
+    "    del p['station']\n",
+    "    test_params.append((r['station'], p))\n",
+    "    \n",
+    "test_params"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1095,)"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_pred_all.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CV Metric: 0.4542181057101191\n"
+      "CV Metric: 0.5822180778066933\n"
      ]
     },
     {
@@ -1361,57 +1337,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1090</th>\n",
-       "      <td>0.10</td>\n",
-       "      <td>0.29</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.12</td>\n",
+       "      <td>0.30</td>\n",
        "      <td>0.14</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>0.27</td>\n",
        "      <td>2015-12-27</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1091</th>\n",
-       "      <td>0.15</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>0.30</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.12</td>\n",
-       "      <td>0.18</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.45</td>\n",
        "      <td>2015-12-28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1092</th>\n",
        "      <td>0.20</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>0.30</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.27</td>\n",
+       "      <td>0.10</td>\n",
+       "      <td>0.17</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.20</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.41</td>\n",
        "      <td>2015-12-29</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1093</th>\n",
-       "      <td>0.15</td>\n",
+       "      <td>0.20</td>\n",
        "      <td>0.19</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.17</td>\n",
+       "      <td>0.22</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>0.42</td>\n",
        "      <td>0.41</td>\n",
        "      <td>2015-12-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1094</th>\n",
-       "      <td>0.05</td>\n",
        "      <td>0.00</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>0.30</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>0.36</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.47</td>\n",
+       "      <td>0.33</td>\n",
+       "      <td>0.41</td>\n",
        "      <td>2015-12-31</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1420,11 +1396,11 @@
       ],
       "text/plain": [
        "      ES0691A  ES1396A  ES1438A  ES1480A  ES1679A  ES1856A  ES1992A  \\\n",
-       "1090     0.10     0.29     0.26     0.39     0.00     0.12     0.14   \n",
-       "1091     0.15     0.19     0.43     0.30     0.00     0.12     0.18   \n",
-       "1092     0.20     0.19     0.39     0.30     0.00     0.08     0.27   \n",
-       "1093     0.15     0.19     0.39     0.43     0.07     0.17     0.41   \n",
-       "1094     0.05     0.00     0.39     0.30     0.20     0.17     0.36   \n",
+       "1090     0.30     0.14     0.09     0.04     0.20     0.38     0.27   \n",
+       "1091     0.20     0.10     0.13     0.09     0.13     0.33     0.45   \n",
+       "1092     0.20     0.10     0.17     0.04     0.20     0.33     0.41   \n",
+       "1093     0.20     0.19     0.22     0.09     0.40     0.42     0.41   \n",
+       "1094     0.00     0.14     0.09     0.13     0.47     0.33     0.41   \n",
        "\n",
        "            date  \n",
        "1090  2015-12-27  \n",
@@ -1434,7 +1410,7 @@
        "1094  2015-12-31  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1446,7 +1422,7 @@
     "\n",
     "lags = 100\n",
     "preds_by_station = []\n",
-    "for s, p in zip(test.station.unique(), test_params):\n",
+    "for s, p in test_params:\n",
     "    data = pd.concat([\n",
     "        wide_series[list(wide_series.reset_index().day < '2015-01-01')],\n",
     "        wide_series_imputed[list(wide_series_imputed.reset_index().day >= '2015-01-01')]\n",
@@ -1479,15 +1455,25 @@
     "\n",
     "predictions = pd.DataFrame(np.column_stack([e[1] for e in preds_by_station]), columns=test.station.unique())\n",
     "predictions['date'] = features.reset_index()['day']\n",
-    "predictions.to_csv('../reports/pred_knn_Jonas_7_{}'.format(len(glob.glob('../reports/pred_knn_Jonas_7_*'))))\n",
+    "predictions.to_csv('../reports/pred_knn_Jonas_7_{}.csv'.format(len(glob.glob('../reports/pred_knn_Jonas_7_*'))))\n",
+    "predictions = predictions.set_index('date')\n",
     "print('CV Metric: {}'.format(np.mean(metrics_all)))\n",
     "predictions.tail()"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## KNN test 2013 on 2014"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 154,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
