--- a/notebooks/Jonas_6.ipynb
+++ b/notebooks/Jonas_6.ipynb
@@ -2,30 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: During startup - \n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Warning messages:\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 1: Setting LC_COLLATE failed, using \"C\" \n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 2: Setting LC_TIME failed, using \"C\" \n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 3: Setting LC_MESSAGES failed, using \"C\" \n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/usr/local/lib/python3.6/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: 4: Setting LC_MONETARY failed, using \"C\" \n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n"
+      "The rpy2.ipython extension is already loaded. To reload it, use:\n",
+      "  %reload_ext rpy2.ipython\n"
      ]
     }
    ],
@@ -50,8 +35,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "test = pd.read_csv('../data/targets.csv')\n",
@@ -1276,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1310,7 +1297,7 @@
        "   'reg_alpha': 0.08919999999999999})]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1469,6 +1456,319 @@
     "            edit_wide_series.loc[d, '{}_{}'.format(s, agg)] = y_pred\n",
     "            print('Predicted {} in {:,.2f}s'.format(y_pred, time.time() - start))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ES0691A_mean</th>\n",
+       "      <th>ES1396A_mean</th>\n",
+       "      <th>ES1438A_mean</th>\n",
+       "      <th>ES1480A_mean</th>\n",
+       "      <th>ES1679A_mean</th>\n",
+       "      <th>ES1856A_mean</th>\n",
+       "      <th>ES1992A_mean</th>\n",
+       "      <th>ES0691A_max</th>\n",
+       "      <th>ES1396A_max</th>\n",
+       "      <th>ES1438A_max</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ES1679A_max</th>\n",
+       "      <th>ES1856A_max</th>\n",
+       "      <th>ES1992A_max</th>\n",
+       "      <th>ES0691A_std</th>\n",
+       "      <th>ES1396A_std</th>\n",
+       "      <th>ES1438A_std</th>\n",
+       "      <th>ES1480A_std</th>\n",
+       "      <th>ES1679A_std</th>\n",
+       "      <th>ES1856A_std</th>\n",
+       "      <th>ES1992A_std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>day</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2013-01-01</th>\n",
+       "      <td>42.39</td>\n",
+       "      <td>38.61</td>\n",
+       "      <td>51.39</td>\n",
+       "      <td>43.87</td>\n",
+       "      <td>37.13</td>\n",
+       "      <td>14.78</td>\n",
+       "      <td>23.35</td>\n",
+       "      <td>72.00</td>\n",
+       "      <td>98.00</td>\n",
+       "      <td>112.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>69.00</td>\n",
+       "      <td>39.00</td>\n",
+       "      <td>68.00</td>\n",
+       "      <td>18.13</td>\n",
+       "      <td>26.67</td>\n",
+       "      <td>25.73</td>\n",
+       "      <td>24.63</td>\n",
+       "      <td>20.29</td>\n",
+       "      <td>10.99</td>\n",
+       "      <td>21.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-02</th>\n",
+       "      <td>52.50</td>\n",
+       "      <td>47.58</td>\n",
+       "      <td>63.71</td>\n",
+       "      <td>54.50</td>\n",
+       "      <td>48.75</td>\n",
+       "      <td>32.08</td>\n",
+       "      <td>43.29</td>\n",
+       "      <td>87.00</td>\n",
+       "      <td>86.00</td>\n",
+       "      <td>119.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>76.00</td>\n",
+       "      <td>77.00</td>\n",
+       "      <td>85.00</td>\n",
+       "      <td>16.61</td>\n",
+       "      <td>24.72</td>\n",
+       "      <td>26.48</td>\n",
+       "      <td>19.18</td>\n",
+       "      <td>16.91</td>\n",
+       "      <td>25.43</td>\n",
+       "      <td>26.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-03</th>\n",
+       "      <td>64.62</td>\n",
+       "      <td>54.62</td>\n",
+       "      <td>74.04</td>\n",
+       "      <td>64.17</td>\n",
+       "      <td>49.25</td>\n",
+       "      <td>38.88</td>\n",
+       "      <td>49.04</td>\n",
+       "      <td>119.00</td>\n",
+       "      <td>85.00</td>\n",
+       "      <td>117.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>78.00</td>\n",
+       "      <td>94.00</td>\n",
+       "      <td>110.00</td>\n",
+       "      <td>22.69</td>\n",
+       "      <td>19.05</td>\n",
+       "      <td>22.87</td>\n",
+       "      <td>21.70</td>\n",
+       "      <td>14.87</td>\n",
+       "      <td>22.17</td>\n",
+       "      <td>31.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-04</th>\n",
+       "      <td>54.12</td>\n",
+       "      <td>44.30</td>\n",
+       "      <td>44.50</td>\n",
+       "      <td>89.13</td>\n",
+       "      <td>61.92</td>\n",
+       "      <td>22.18</td>\n",
+       "      <td>39.04</td>\n",
+       "      <td>80.00</td>\n",
+       "      <td>113.00</td>\n",
+       "      <td>123.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>108.00</td>\n",
+       "      <td>60.00</td>\n",
+       "      <td>99.00</td>\n",
+       "      <td>16.58</td>\n",
+       "      <td>28.35</td>\n",
+       "      <td>32.46</td>\n",
+       "      <td>45.41</td>\n",
+       "      <td>25.83</td>\n",
+       "      <td>16.98</td>\n",
+       "      <td>28.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-01-05</th>\n",
+       "      <td>36.88</td>\n",
+       "      <td>39.17</td>\n",
+       "      <td>44.50</td>\n",
+       "      <td>89.00</td>\n",
+       "      <td>64.00</td>\n",
+       "      <td>12.25</td>\n",
+       "      <td>33.54</td>\n",
+       "      <td>60.00</td>\n",
+       "      <td>114.00</td>\n",
+       "      <td>123.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>114.00</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>85.00</td>\n",
+       "      <td>11.00</td>\n",
+       "      <td>22.21</td>\n",
+       "      <td>32.46</td>\n",
+       "      <td>21.63</td>\n",
+       "      <td>17.04</td>\n",
+       "      <td>2.56</td>\n",
+       "      <td>17.75</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ES0691A_mean  ES1396A_mean  ES1438A_mean  ES1480A_mean  \\\n",
+       "day                                                                  \n",
+       "2013-01-01         42.39         38.61         51.39         43.87   \n",
+       "2013-01-02         52.50         47.58         63.71         54.50   \n",
+       "2013-01-03         64.62         54.62         74.04         64.17   \n",
+       "2013-01-04         54.12         44.30         44.50         89.13   \n",
+       "2013-01-05         36.88         39.17         44.50         89.00   \n",
+       "\n",
+       "            ES1679A_mean  ES1856A_mean  ES1992A_mean  ES0691A_max  \\\n",
+       "day                                                                 \n",
+       "2013-01-01         37.13         14.78         23.35        72.00   \n",
+       "2013-01-02         48.75         32.08         43.29        87.00   \n",
+       "2013-01-03         49.25         38.88         49.04       119.00   \n",
+       "2013-01-04         61.92         22.18         39.04        80.00   \n",
+       "2013-01-05         64.00         12.25         33.54        60.00   \n",
+       "\n",
+       "            ES1396A_max  ES1438A_max     ...       ES1679A_max  ES1856A_max  \\\n",
+       "day                                      ...                                  \n",
+       "2013-01-01        98.00       112.00     ...             69.00        39.00   \n",
+       "2013-01-02        86.00       119.00     ...             76.00        77.00   \n",
+       "2013-01-03        85.00       117.00     ...             78.00        94.00   \n",
+       "2013-01-04       113.00       123.00     ...            108.00        60.00   \n",
+       "2013-01-05       114.00       123.00     ...            114.00        16.00   \n",
+       "\n",
+       "            ES1992A_max  ES0691A_std  ES1396A_std  ES1438A_std  ES1480A_std  \\\n",
+       "day                                                                           \n",
+       "2013-01-01        68.00        18.13        26.67        25.73        24.63   \n",
+       "2013-01-02        85.00        16.61        24.72        26.48        19.18   \n",
+       "2013-01-03       110.00        22.69        19.05        22.87        21.70   \n",
+       "2013-01-04        99.00        16.58        28.35        32.46        45.41   \n",
+       "2013-01-05        85.00        11.00        22.21        32.46        21.63   \n",
+       "\n",
+       "            ES1679A_std  ES1856A_std  ES1992A_std  \n",
+       "day                                                \n",
+       "2013-01-01        20.29        10.99        21.15  \n",
+       "2013-01-02        16.91        25.43        26.53  \n",
+       "2013-01-03        14.87        22.17        31.43  \n",
+       "2013-01-04        25.83        16.98        28.20  \n",
+       "2013-01-05        17.04         2.56        17.75  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wide_series_imputed_xgb = pd.read_csv('../data/wide_series_imputed_xgb.csv', index_col=0).fillna(method='ffill')\n",
+    "wide_series_imputed_xgb.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import  KFold\n",
+    "from sklearn.metrics import log_loss\n",
+    "\n",
+    "lags = 100\n",
+    "preds_by_station = []\n",
+    "for s, p in test_params:\n",
+    "    data = pd.concat([\n",
+    "        wide_series[list(wide_series.reset_index().day < '2015-01-01')],\n",
+    "        wide_series_imputed_xgb[list(wide_series_imputed_xgb.reset_index().day >= '2015-01-01')]\n",
+    "    ])\n",
+    "    to_lag = data[[c for c in data.columns if not c in ['{}_{}'.format(s, agg) for agg in agg_types]]]\n",
+    "    features = create_lagged_features(to_lag, lags)\\\n",
+    "        .join(extra_features[extra_features.station == s].set_index('date'))\\\n",
+    "        .join(rolling_mean_features[rolling_mean_features.station == s]\n",
+    "              .set_index('date').drop(['station', 'max_conc_obs'], axis=1))\\\n",
+    "        .join(obs_and_mods[obs_and_mods.station == s][['Concentration', 'day']].groupby('day').max())\\\n",
+    "        .fillna(method='ffill').fillna(0)\n",
+    "    X = features[[c for c in features.columns if not c in [\n",
+    "        'time', 'datetime', 'Concentration', 'target', 'station'\n",
+    "    ]]].values\n",
+    "    y = (features['Concentration'].values > 100).astype(int)\n",
+    "    y_pred_all = copy.deepcopy(y).astype(float)\n",
+    "    metrics_all = []\n",
+    "    \n",
+    "    kf = KFold(n_splits=2)\n",
+    "    for train_index, test_index in kf.split(X):\n",
+    "        X_train, X_test = X[train_index], X[test_index]\n",
+    "        y_train, y_test = y[train_index], y[test_index]\n",
+    "        p['probability'] = True\n",
+    "        model = xgb.XGBClassifier(**p)\n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict(X_test)[:, 1]\n",
+    "        y_pred_all[test_index] = y_pred\n",
+    "        metrics_all.append(log_loss(y_test, y_pred, labels=(0, 1)))\n",
+    "        \n",
+    "    preds_by_station.append((s, y_pred_all))\n",
+    "\n",
+    "predictions = pd.DataFrame(np.column_stack([e[1] for e in preds_by_station]), columns=test.station.unique())\n",
+    "predictions['date'] = features.drop('day', axis=1).reset_index()['day']\n",
+    "predictions.to_csv('../reports/pred_xgb_Jonas_6{}.csv'.format(len(glob.glob('../reports/pred_xgb_Jonas_6_*'))))\n",
+    "print('CV Metric: {}'.format(np.mean(metrics_all)))\n",
+    "predictions.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
