--- a/notebooks/Jonas_6.ipynb
+++ b/notebooks/Jonas_6.ipynb
@@ -1712,15 +1712,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "shape mismatch: value array of shape (548,2) could not be broadcast to indexing result of shape (548,)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-24-2c5ebbb0189f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m         \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict_proba\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m         \u001b[0my_pred_all\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtest_index\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m         \u001b[0mmetrics_all\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlog_loss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: shape mismatch: value array of shape (548,2) could not be broadcast to indexing result of shape (548,)"
+     ]
+    }
+   ],
    "source": [
-    "from sklearn.svm import SVC\n",
     "from sklearn.model_selection import  KFold\n",
     "from sklearn.metrics import log_loss\n",
     "\n",
-    "lags = 100\n",
+    "lags = 25\n",
     "preds_by_station = []\n",
     "for s, p in test_params:\n",
     "    data = pd.concat([\n",
@@ -1748,15 +1759,15 @@
     "        p['probability'] = True\n",
     "        model = xgb.XGBClassifier(**p)\n",
     "        model.fit(X_train, y_train)\n",
-    "        y_pred = model.predict(X_test)[:, 1]\n",
+    "        y_pred = model.predict_proba(X_test)\n",
     "        y_pred_all[test_index] = y_pred\n",
     "        metrics_all.append(log_loss(y_test, y_pred, labels=(0, 1)))\n",
     "        \n",
     "    preds_by_station.append((s, y_pred_all))\n",
     "\n",
     "predictions = pd.DataFrame(np.column_stack([e[1] for e in preds_by_station]), columns=test.station.unique())\n",
-    "predictions['date'] = features.drop('day', axis=1).reset_index()['day']\n",
-    "predictions.to_csv('../reports/pred_xgb_Jonas_6{}.csv'.format(len(glob.glob('../reports/pred_xgb_Jonas_6_*'))))\n",
+    "predictions['date'] = features.reset_index()['day']\n",
+    "predictions.to_csv('../reports/pred_xgb_Jonas_6_{}.csv'.format(len(glob.glob('../reports/pred_xgb_Jonas_6_*'))))\n",
     "print('CV Metric: {}'.format(np.mean(metrics_all)))\n",
     "predictions.tail()"
    ]
