--- a/notebooks/Jonas_6-1.ipynb
+++ b/notebooks/Jonas_6-1.ipynb
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,7 @@
        "9 0.78         22           189       0.09  97.92  ES1438A"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
        "   'reg_alpha': 0.08919999999999999})]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,6 +996,15 @@
     "            edit_wide_series.loc[d, '{}_{}'.format(s, agg)] = y_pred\n",
     "            print('Predicted {} in {:,.2f}s'.format(y_pred, time.time() - start))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
